test: use kotest for existing tests